--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.7.13",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
+    "axios": "^0.24.0",
     "mobx": "^6.3.9",
     "mobx-react": "^7.2.1",
     "mobx-react-lite": "^3.2.2",
