--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "typescript": "^4.4.2",
-    "uuid": "^8.3.2",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
@@ -46,7 +45,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "@types/uuid": "^8.3.3"
-  }
+  "devDependencies": {}
 }
